--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/JhonPerez95/retos/issues"
   },
-  "homepage": "https://github.com/JhonPerez95/retos#readme"
+  "homepage": "https://github.com/JhonPerez95/retos#readme",
+  "dependencies": {
+    "axios": "^0.21.4"
+  }
 }
