--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/JhonPerez95/retos#readme",
   "dependencies": {
-    "axios": "^0.21.4"
+    "axios": "^0.21.4",
+    "g": "^2.0.1",
+    "nodemon": "^2.0.15"
   }
 }
